--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
