--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "easy-peasy": "^3.3.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-countdown-now": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.4",
     "react-router-dom": "^5.1.2",
