--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stepper-horizontal": "^1.0.11",
+    "react-toastify": "^5.5.0",
     "semantic-ui-react": "^0.88.2",
     "sweetalert": "^2.1.2",
     "web3": "^1.2.6"
